<resources>
    <string name="app_name">BaseStructure</string>
    <string name="brand_text">Car</string>
    <string name="year_text">Year</string>
    <string name="color_text">Color</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="search_hint">Search</string>
    <string name="leave_app_dialog_msg">Do you want to leave the application?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="unsaved_changes_dialog">Discard your changes and quit editing?</string>
    <string name="product_name">product</string>
    <string name="product_description">description</string>
    <string name="product_priority">priority</string>
    <string name="save">Save</string>
    <string name="row_is_clicked">Row is clicked</string>
    <string name="fragment_unsaved_data">You have unsaved data, would you like to leave without saving?</string>
    <string name="to_do">To do</string>
    <string name="category_overview">Overview</string>
    <string name="hint_to_do">To Do</string>
    <string name="hint_to_do_description">Description</string>
    <string name="priority_string">Priority</string>
    <string name="high_priority">High</string>
    <string name="medium_priority">Medium</string>
    <string name="low_priority">Low</string>
    <string name="when_string">When</string>
    <string name="calendar">Calendar</string>
    <string name="where_string">Where</string>
    <string name="location">Location</string>
    <string name="cancel">Cancel</string>
    <string name="set">Set</string>
    <string name="clock">Clock</string>
    <string name="time_picker_error_message">The time should be in the future!</string>
    <string name="date_picker_error_message">The chosen date should be current or future!</string>
    <string name="warning_incorrect_date_to_do_details_fragment">Your date is previous than today!</string>
    <string name="warning_incorrect_time_case_wrong_date_to_do_details_fragment">Can not set the time until date is correct!</string>
    <string name="warning_incorrect_time_to_do_details_fragment">Set correct time!</string>
    <string name="expire_to_do_notification_title">ToDo Expire Warning!</string>
    <string name="expire_to_do_notification_content">%s expires after one hour!</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="dialog_calendar_title">Calendar</string>
    <string name="dialog_location_title">Location</string>
    <string name="dialog_time_title">Time</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
