<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_dialog_fragment_container_date"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog"
    android:layout_gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_dialog_date_picker_validation_error_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/date_picker_error_message"
        android:textColor="@color/colorWhite"
        android:visibility="gone" />

    <DatePicker
        android:id="@+id/dp_dialog_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel_date_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/fab_margin"
            android:background="@drawable/button"
            android:text="@string/cancel"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/btn_set_date_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/fab_margin"
            android:background="@drawable/button"
            android:text="@string/set"
            android:textColor="@color/colorWhite" />


    </LinearLayout>

</LinearLayout>

